<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- Top Bar with Logo and App Name -->
            <LinearLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:background="@color/Splash"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/appTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBackground"
                    android:textSize="20sp"
                    android:paddingStart="8dp"/>
            </LinearLayout>


            <!-- Walmart Image -->
            <ImageView
                android:id="@+id/walmartImage"
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="Walmart"
                android:src="@drawable/ic_walmart"
                app:layout_constraintBottom_toTopOf="@id/card1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topBar" />


            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                app:columnCount="2"
                app:rowCount="2"
                android:background="@color/gray">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_dashboard_item1"
                            android:contentDescription="@string/dashboard_item1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Future Price"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Card 2 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_dashboard_item2"
                            android:contentDescription="@string/dashboard_item2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Discount Analysis"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Card 3 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_dashboard_item3"
                            android:contentDescription="@string/dashboard_item3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Price Anomaly"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Card 4 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_dashboard_item4"
                            android:contentDescription="@string/dashboard_item4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Price Comaprison"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!-- Card 4 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_dashboard_item5"
                            android:contentDescription="@string/dashboard_item4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Home"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!-- Card 4 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/settings"
                            android:contentDescription="@string/dashboard_item4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Settings"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.gridlayout.widget.GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
